--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                 <div style="width: 50%;  border-right: 1px dashed #DBDBDB;">
                     <div style="">
                         <p style="font-size: 12px; color: #4D4D4F;">Trip Date:</p>
-                        <p style="font-size: 12px; color: black;">22/04/2022</p>
+                        <p style="font-size: 12px; color: black; font-weight: 600;">22/04/2022</p>
                     </div>
                     <div style=" margin-top: 11px;">
                         <p style="font-size: 12px; color: #4D4D4F;">From:</p>
-                        <p style="font-size: 12px; color: black; margin-top: 4px;">Dhaka</p>
+                        <p style="font-size: 12px; color: black; margin-top: 4px; font-weight: 600;">Dhaka</p>
                     </div>
 
                     <div style=" margin-top: 8px;">
@@ -145,7 +145,7 @@
 
                     <div style=" margin-top: 8px;">
                         <p style="font-size: 12px; color: #4D4D4F;">Reporting Time:</p>
-                        <p style="font-size: 12px; color: black; font-weight: 500; margin-top: 4px;">08:45 AM</p>
+                        <p style="font-size: 12px; color: black; font-weight: 600; margin-top: 4px;">08:45 AM</p>
                     </div>
                 </div>
                 <div style="width: 50%; padding-left: 10px; border-radius: 4px;">
@@ -155,7 +155,7 @@
                     </div>
                     <div style="margin-top: 8px;">
                         <p style="font-size: 12px; color: #4D4D4F;">To:</p>
-                        <p style="font-size: 12px; color: black; margin-top: 4px;">Chittagong</p>
+                        <p style="font-size: 12px; color: black; margin-top: 4px; font-weight: 600;">Chittagong</p>
                     </div>
 
                     <div style=" margin-top: 11px;">
@@ -165,7 +165,7 @@
 
                     <div style=" margin-top: 11px;">
                         <p style="font-size: 12px; color: #4D4D4F;">Issued By:</p>
-                        <p style="font-size: 12px; color: black; font-weight: 500; margin-top:4px">Counterman Name</p>
+                        <p style="font-size: 12px; color: black; font-weight: 600; margin-top:4px">Counterman Name</p>
                     </div>
                 </div>
 
@@ -234,19 +234,19 @@
                     <div style="display: flex; justify-content: space-between; padding: 10px;">
                         <div style="width: 50%;">
                             <p style="font-weight: 700; color: black; font-size: 12px;"><span style="font-weight: 400;">PNR:</span> E81JMKEYUVYGC</p>
-                            <p style="font-weight: 400; color: black; font-size: 11px; margin-top: 8px; font-weight: 600;">From: Banani</p>
+                            <p style="font-weight: 400; color: black; font-size: 11px; margin-top: 8px; font-weight: 600;"><span style="font-weight: 400;"> From:</span> Banani</p>
                             <p style="font-size: 11px; color:#4D4D4F; margin-top: 8px;"> Boarding Counter:</p>
                             <p style="color: #151414; font-weight: 600; font-size: 12px; margin-top: 1px;">North Kamalapur Counter</p>
-                            <p style="font-size: 12px; margin-top: 8px;"> <span style="color:   #4D4D4F;"> Reporting time:</span>  08:45 AM</p>
+                            <p style="font-size: 12px; margin-top: 8px; font-weight: 600;"> <span style="color:   #4D4D4F; font-weight: 400;"> Reporting time:</span>  08:45 AM</p>
                             <p style="font-size: 12px; margin-top: 8px;"> <span style="color:   #4D4D4F;"> Issued by:</span> Counterman Name</p>
                         </div>
                         <div style="width: 50%;">
-                            <p style="font-size: 12px; color: #151414;"> <span style="color:   #4D4D4F;"> Trip Date:</span>  22/04/2022</p>
-                            <p style="font-weight: 600; color: black; font-size: 11px; margin-top: 8px;">To: Chittagong</p>
+                            <p style="font-size: 12px; color: #151414; font-weight: 600;"> <span style="color:   #4D4D4F;font-weight: 400; "> Trip Date:</span>  22/04/2022</p>
+                            <p style="font-weight: 600; color: black; font-size: 11px; margin-top: 8px;"><span style="font-weight: 400;">To:</span> Chittagong</p>
 
                             <p style="color:#4D4D4F; font-size:11px; margin-top: 8px;">Depurture Date & Time:</p>
                             <p style="font-size: 12px; color: #151414; font-weight: 600; margin-top: 1px;">09:00 AM, 22/04/2022</p>
-                            <p style="color:#4D4D4F; font-size:11px; margin-top: 8px;">Booking Date: 20/04/2022</p>
+                            <p style="color:#4D4D4F; font-size:11px; margin-top: 8px; font-weight: 600;"><span style="font-weight: 400;">Booking Date:</span> 20/04/2022</p>
                         </div>
                     </div>
                 </div>
